--- a/file-integrity.yaml
+++ b/file-integrity.yaml
@@ -29,3 +29,6 @@ status:
 
 oc get fileintegrities -n openshift-file-integrity
 oc get fileintegrities/worker-fileintegrity  -o jsonpath="{ .status.phase }"
+status
+
+oc get fileintegritynodestatuses
